# discord-music-bot

./: .gitignore  bajao.py  example.env  pyproject.toml  requirements.txt
cmd/misc/: help.py  ping.py
cmd/player/: now_playing.py  play.py  queue.py  remove.py  status.py  volume.py
config/: embeds.py  emojis.py  lavalink.py  prefix.py  settings.py
database/: base.py  init.py  models.py  session.py
database/crud/: base.py  guild.py
manager/: basic_check.py
manager/handlers/: bot_mention.py  music_events.py  player_manager.py  queue_manager.py
manager/startups/: presence.py
ui/views/: player_views.py  queue_paginator.py  queue_views.py  volume_views.py
utils/: respond.py
