[project]
name = "DV-Music"
version = "0.1.0"
description = "Modern Discord music bot"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "discord.py>=2.5.2,<3.0.0",
    "wavelink>=3.4.1",
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
    "aiohttp>=3.12.15",
    "python-dotenv>=1.2.2",
    "psutil>=7.2.2",
    "pynacl>=1.6.2",
    "davey>=0.1.5",
]
